# Trees-Everywhere

./: README.md  manage.py  pyproject.toml
TreesEverywhere/: asgi.py  settings.py  urls.py  wsgi.py
trees/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
trees/migrations/: 0001_initial.py  0002_plantedtree_account.py
trees/static/css/: styles.css
trees/templates/: account_trees.html  add_tree.html  base.html  login.html  plant_tree.html  tree_detail.html  user_trees.html
