[tool.poetry]
name = "treeseverywhere"
version = "0.1.0"
description = ""
authors = ["leozz"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.13.1"
django = "^5.0.7"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
